<resources>
    <string name="app_name">White Noise</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_mixes">Mixes</string>
    <string name="title_sounds">Sounds</string>
    <string name="title_settings">Settings</string>
    <string name="mixes">Mixes</string>
    <string name="sleep_sounds">Sleep sounds</string>
    <string name="item_name">Item name</string>
    <string name="settings">Settings</string>
    <string name="go_premium">Go Premium!</string>
    <string name="start_free_trial">Start Free Trial</string>
    <string name="bedtime_reminder">Bedtime Reminder</string>
    <string name="feedback">Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="version">Version %s </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unlock_all_sounds">Unlock\n All Sounds</string>
    <string name="remove_ads">Remove\n Ads</string>
    <string name="_7_day_free_trial">7-day Free Trial</string>
    <string name="month">/ month</string>
    <string name="go_premium_info">This subscription gives you unlimited access to our app content library if you don’t cancel before the trial ends, you will be automatically charged $10,24 each year until you cancel. If you choose the monthly subscription, you will be automatically charged $4,6$ each month until you cancel.</string>
    <string name="details">Details</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="details_content">By premium, you can:\n\n
        \u2022 Unlock all sounds\n\n
        \u2022 Remove ads\n\n
        Premium subscription automatically renews unless auto-renew is turned off at least 24-hours before the end of the current period.\n
        You can turn off auto-renew at any time from your Google Play Store account settings but refunds will not be provided for any unused portion of the term.\n
        If you cancel a subscription purchased from an app on Google Plfy, you will not receive a refund for the current billing period, but will continue to receive their subscription content for the remainder of the current billing period, regardless of the cancellation date. The cancellation goes into effect the current billing period has passed.\n
    </string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="reminder_content">Regular bedtime helps form\nhealthy sleep habits.</string>
    <string name="select_reminder_time">Select reminder time</string>
    <string name="repeat">Repeat</string>
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="unlock_for_free">Unlock for Free</string>
    <string name="unlock_free_text">Watch a short video\n to get this premium mix</string>
    <string name="watch_video">Watch video</string>
    <string name="unlock_all">Unlock All Sounds</string>
    <string name="close">Close</string>
    <string name="save_custom">Save custom</string>
    <string name="system_volume">System Volume</string>
</resources>